--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,23 @@ atlassian-ide-plugin.xml
 out/
 *.ipr
 *.iws
+
+.cache
+scalastyle-output.xml
+.classpath
+.idea/*
+.metadata
+.settings
+.project
+.version.properties
+filter.properties
+logs.zip
+target
+tmp
+*.class
+*.iml
+*.swp
+*.jar
+*.log
+*.ipr
+*.iws
